# ctc-decoder

./: .gitignore  CMakeLists.txt  README.md  setup.py
benchmarks/: CMakeLists.txt  bench.cpp  bench_batch.cpp
bindings/: pybind.cpp
include/ctc/: batch_decoder.h  ctc_api.h  decoder.h  greedy_decoder.h  prefix_beam_search.h  simd_utils.h  thread_pool.h  types.h
src/: batch_decoder.cpp  ctc_api.cpp  ctc_shim.cpp  greedy_decoder.cpp  prefix_beam_search.cpp  thread_pool.cpp
tests/: CMakeLists.txt  test_batch.cpp  test_beam.cpp  test_greedy.cpp  test_simd.cpp
